build: migration of spring boot to v3
- upgraded spring boot from v3
- upgraded spring framework to v6
- moved javax.* modules to jakarta.* (for applicable)
- migrated javax.mail to jakarta.mail

BREAKING CHANGE: New spring boot and framework version

(cherry picked from commit 27552a5f2b345bca358492e0a918ca1a0d4363c0)